Add matcher stuff

--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -13,13 +13,13 @@ LABEL yamllint_version=$yamllint_version
 RUN pip install "yamllint==$yamllint_version"
 
 # # Install Helm
-# ARG helm_version=v3.9.2
-# LABEL helm_version=${helm_version}
-# RUN curl -LO "https://get.helm.sh/helm-${helm_version}-linux-amd64.tar.gz" \
-#     && mkdir -p "/usr/local/helm-${helm_version}" \
-#     && tar -xzf "helm-${helm_version}-linux-amd64.tar.gz" -C "/usr/local/helm-${helm_version}" \
-#     && ln -s "/usr/local/helm-${helm_version}/linux-amd64/helm" /usr/local/bin/helm \
-#     && rm -f "helm-${helm_version}-linux-amd64.tar.gz"
+ARG helm_version=v3.9.2
+LABEL helm_version=${helm_version}
+RUN curl -LO "https://get.helm.sh/helm-${helm_version}-linux-amd64.tar.gz" \
+    && mkdir -p "/usr/local/helm-${helm_version}" \
+    && tar -xzf "helm-${helm_version}-linux-amd64.tar.gz" -C "/usr/local/helm-${helm_version}" \
+    && ln -s "/usr/local/helm-${helm_version}/linux-amd64/helm" /usr/local/bin/helm \
+    && rm -f "helm-${helm_version}-linux-amd64.tar.gz"
 
 ###
 
@@ -27,8 +27,8 @@ RUN pip install "yamllint==$yamllint_version"
 # note: this tool has been added to allow users to declare that the output of the tests should
 # be converted from human-readable Go test output to a sonobuoy-plugin-readable JUnit XML report
 
-ARG go_junit_report_version=v2.0.0
-RUN go install github.com/jstemmer/go-junit-report/v2@${go_junit_report_version}
+ARG gotestsum_version=v1.8.2
+RUN go install gotest.tools/gotestsum@@${gotestsum_version}
 
 ###
 
@@ -42,16 +42,16 @@ RUN echo 'hull:x:1000:1000::/home/hull:/bin/bash' >> /etc/passwd && \
 WORKDIR /home/hull
 USER hull
 
-COPY tests tests
-COPY go.mod go.mod
-COPY go.sum go.sum
 COPY package/entry.sh entry.sh
 COPY etc/lint.yaml lint.yaml
 
 ENV YAMLLINT_CONFIG_FILE=/home/hull/lint.yaml
+
+COPY examples tests
+COPY go.mod go.mod
+COPY go.sum go.sum
 RUN go mod download
 
 ###
 
 ENTRYPOINT ["./entry.sh"]
-CMD ["chart"]
