--- a/pkg/chart/configuration/yamllint.yaml
+++ b/pkg/chart/configuration/yamllint.yaml
@@ -11,7 +11,7 @@ rules:
     max-spaces-inside-empty: -1
   colons:
     max-spaces-before: 0
-    max-spaces-after: 1
+    max-spaces-after: -1
   commas:
     max-spaces-before: 0
     min-spaces-after: 1
@@ -20,7 +20,7 @@ rules:
     require-starting-space: true
     min-spaces-from-content: 2
   document-end: disable
-  document-start: disable           # No --- to start a file
+  document-start: disable
   empty-lines:
     max: 2
     max-start: 0
@@ -29,10 +29,10 @@ rules:
     max-spaces-after: 1
   indentation:
     spaces: consistent
-    indent-sequences: whatever      # - list indentation will handle both indentation and without
+    indent-sequences: whatever
     check-multi-line-strings: false
   key-duplicates: enable
-  line-length: disable              # Lines can be any length
+  line-length: disable
   new-line-at-end-of-file: enable
   new-lines:
     type: unix
