--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -10,7 +10,7 @@ RUN if [ "${ARCH}" == "amd64" ]; then \
     fi
 
 ENV DAPPER_ENV REPO TAG DRONE_TAG CROSS
-ENV DAPPER_SOURCE /go/src/github.com/rancher/hull/
+ENV DAPPER_SOURCE /go/src/github.com/aiyengar2/hull/
 ENV DAPPER_OUTPUT ./bin ./dist
 ENV DAPPER_DOCKER_SOCKET true
 ENV GOPATH /go
