--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -6,8 +6,37 @@ ENV ARCH $DAPPER_HOST_ARCH
 RUN zypper -n install git docker vim less file curl wget
 RUN go get golang.org/x/tools/cmd/goimports
 RUN if [ "${ARCH}" == "amd64" ]; then \
-        curl -sL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.40.1; \
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.49.0; \
     fi
+
+# # Install Helm
+ARG helm_version=v3.9.2
+LABEL helm_version=${helm_version}
+RUN curl -LO "https://get.helm.sh/helm-${helm_version}-linux-amd64.tar.gz" \
+    && mkdir -p "/usr/local/helm-${helm_version}" \
+    && tar -xzf "helm-${helm_version}-linux-amd64.tar.gz" -C "/usr/local/helm-${helm_version}" \
+    && ln -s "/usr/local/helm-${helm_version}/linux-amd64/helm" /usr/local/bin/helm \
+    && rm -f "helm-${helm_version}-linux-amd64.tar.gz"
+
+###
+
+# CI Dependencies
+# ref: https://github.com/helm/chart-testing/blob/main/Dockerfile
+
+RUN zypper --non-interactive install tar python3 python3-pip
+
+# Install a YAML Linter
+ARG yamllint_version=1.26.3
+LABEL yamllint_version=$yamllint_version
+RUN pip install "yamllint==$yamllint_version"
+
+# JUnit XML Report Output Support
+# note: this tool has been added to allow users to declare that the output of the tests should
+# be converted from human-readable Go test output to a machine-parseable JUnit XML report
+
+ARG gotestsum_version=v1.8.2
+LABEL gotestsum_version=${gotestsum_version}
+RUN go install gotest.tools/gotestsum@${gotestsum_version}
 
 ENV DAPPER_ENV REPO TAG DRONE_TAG CROSS
 ENV DAPPER_SOURCE /go/src/github.com/aiyengar2/hull/
