--- a/testdata/charts/simple-chart/Chart.yaml
+++ b/testdata/charts/simple-chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: with-schema
+name: simple-chart
 description: Hull Example Chart
 version: 0.0.0
 appVersion: 0.0.0
@@ -10,7 +10,7 @@ annotations:
   catalog.cattle.io/namespace: cattle-hull-system
   catalog.cattle.io/permits-os: linux,windows
   catalog.cattle.io/rancher-version: '>= 2.7.0-0 <=2.7.99-0'
-  catalog.cattle.io/release-name: with-schema
+  catalog.cattle.io/release-name: simple-chart
   catalog.cattle.io/os: linux,windows
 maintainers:
 - email: arvind.iyengar@suse.com
